# TADMA

./: CMakeLists.txt  LICENSE  README.md  main.cu  onnx2tadma.py  test.cu
include/tadma/: Allocator.hpp  Concepts.hpp  Defines.hpp  ExecutionTape.hpp  Globals.hpp  Kernels.hpp  Meta.hpp  Node.hpp  Operations.hpp  Sequence.hpp  Storage.hpp  Tadma.hpp  Tagging.hpp  Tensor.hpp  Types.hpp  Utils.hpp
include/tadma/kernels/: EltwiseVariadicND.hpp  Reduce.hpp
scripts/: cppgen.py  generated.cu  onnx2tadma.py  onnxparse.py  tadma.py  tadma_2.py
